--- a/css/selection.css
+++ b/css/selection.css
@@ -1,8 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 #battle-zone {
     display: grid;
     justify-items: center;
     align-items: center;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 h1 {
@@ -19,4 +24,38 @@ h2 {
     text-align: center;
     padding: 5px;
     margin: 5px;
+}
+
+#userHP {
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    padding: 5px;
+    margin: 5px;
+}
+
+#enemyHP {
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    padding: 5px;
+    margin: 5px;
+}
+
+#attackButtons {
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
+    grid-row-gap: 10px;
+}
+
+#returnAndRemove {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    align-items: center;
+    text-align: center;
+    margin: 15em;
 }
